assets/css/main.css
/* code cho file rieng */
.header {
  height: var(--header-height);
  background-image: linear-gradient(0, #fe6433, #f53e2d);
}

.header__navbar {
  display: flex;
  justify-content: space-between;
  height: var(--navbar-height);
}

.header__navbar-list {
  list-style: none;
  padding-left: 0;
  margin-top: 4px 0 0 0;
}

.header__navbar-item {
  margin: 0 8px;
  position: relative;
  min-height: 26px;
}

.header__navbar-item--has-qr:hover .header__qr {
  display: block;
}

.header__navbar-item--has-notify:hover .header__notify {
  display: block;
}

.header__navbar-item,
.header__navbar-item-link {
  display: inline-block;
  font-size: 1.4rem;
  color: var(--white-color);
  text-decoration: none;
  font-weight: 300;
}

.header__navbar-item,
.header__navbar-item-link,
.header__navbar-icon {
  display: inline-flex;
  align-items: center;
}

.header__navbar-item:hover,
.header__navbar-item-link:hover,
.header__navbar-icon-link:hover {
  color: rgba(255, 255, 255, 0.7);
  cursor: pointer;
}

.header__navbar-item--strong {
  font-weight: 400;
}

.header__navbar-item--separate::after {
  content: "";
  display: block;
  position: absolute;
  border-left: 1px solid #fb9086;
  height: 16px;
  right: -9px;
  top: 50%;
  transform: translateY(-50%);
}

.header__navbar-icon-link {
  color: var(--white-color);
  text-decoration: none;
}

.header__navbar-icon {
  font-size: 1.5rem;
  margin: 0 4px;
}

.header__navbar-title--no-pointer {
  cursor: text;
  color: var(--white-color);
}

/* Header QR */
.header__qr {
  background-color: var(--white-color);
  width: 186px;
  position: absolute;
  left: 0;
  /* top = 100% the qr se cach top page dung = witdth cua F8-shop li */
  top: 118%;
  padding: 8px;
  border-radius: 2px;
  display: none;
  animation: fadeIn ease-in 0.3s;
}

.header__qr::before {
  content: "";
  /* width = 100% rong = dung the qr */
  width: 100%;
  height: 18%;
  display: block;
  position: absolute;
  left: 0;
  top: -16px;
}

.header__qr-img {
  width: 100%;
}

.header__qr-apps {
  display: flex;
  justify-content: space-between;
}

.header__qr-link:first-child {
  margin-left: 11px;
}

.header__qr-link:nth-child(2) {
  margin-right: 11px;
}

.header__qr-download-img {
  height: 16px;
}

/* Notification */
.header__notify {
  position: absolute;
  top: 118%;
  right: 0;
  width: 404px;
  border: 1px solid #d3d3d3;
  background-color: var(--white-color);
  cursor: default;
  transform-origin: calc(100%-20px) top;
  animation: headerNotifyGrowhth ease-in 0.2s;
  /* toi uu thuoc tinh cho opacity vs transform theo trinh duyet */
  will-change: opacity, transform;
  display: none;
}

/* tao mui ten chi vao thong bao */
.header__notify::before {
  content: "";
  border: solid;
  border-width: 20px 27px;
  border-color: transparent transparent var(--white-color) transparent;
  position: absolute;
  right: 4px;
  top: -29px;
}

.header__notify::after {
  content: "";
  display: block;
  position: absolute;
  /* phai co ca width vs height moi hien block do khong co content */
  width: 90px;
  height: 20px;
  right: 0;
  top: -16px;
}

@keyframes headerNotifyGrowhth {
  from {
    opacity: 0;
    transform: scale(0);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.header__notify-header {
  height: 40px;
  background-color: var(--white-color);
}

.header__notify-header h3 {
  color: #999;
  line-height: 40px;
  margin: 0 0 0 12px;
  font-weight: 400;
  font-size: 1.4rem;
  user-select: none;
}

.header__notify-list {
  padding-left: 0;
  list-style: none;
}

.header__notify-item:hover {
  background-color: #f7f7f7;
}

.header__notify-item--viewed {
  background-color: rgba(238, 75, 43, 0.1);
}

.header__notify-link {
  display: flex;
  padding: 12px;
  width: 100%;
  text-decoration: none;
}

.header__notify-img {
  width: 48px;
  object-fit: contain;
}

.header__notify-info {
  margin-left: 12px;
}

.header__notify-name {
  display: block;
  font-size: 1.4rem;
  color: var(--text-color);
  font-weight: 400;
  line-height: 1.8rem;
}

.header__notify-description {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #756f6e;
  margin-top: 4px;
}

/* .header__notify-footer{
    display: flex;
} */

.header__notify-footer-btn {
  text-decoration: none;
  color: var(--text-color);
  padding: 8px 0;
  /* can giua element trong flex container margin: auto */
  /* margin: auto; */
  font-size: 1.4rem;
  font-weight: 400;
  /* btn khi cho padding khong an vi a tag khong phai block */
  display: block;
  text-align: center;
}

/* Authen Modal */
.auth-form__container {
  padding: 0 32px;
}

.auth_form {
  width: 500px;
  background-color: var(--white-color);
  border-radius: 5px;
  /* có lớp auth-form__socials là con auth_form nên che mất border-radius */
  /* overflow: hidden có thể bo con lại */
  overflow: hidden;
}

.auth-form__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 12px;
  margin-top: 10px;
}

.auth-form__heading {
  font-size: 2.2rem;
  font-weight: 400;
  color: var(--text-color);
}

.auth-form_switch-btn {
  font-size: 1.6rem;
  color: var(--primary-color);
  cursor: pointer;
}

.auth-form__input {
  width: 100%;
  height: 40px;
  margin-top: 16px;
  padding: 0 12px;
  font-size: 1.4rem;
  border: 1px solid var(--border-color);
  border-radius: 2px;
  outline: none;
}

.auth-form__input:focus {
  border-color: #888;
}

.auth-form__aside {
  margin-top: 18px;
}

.auth-form__policy-text {
  font-size: 1.2rem;
  line-height: 1.6rem;
  text-align: center;
  padding: 0 12px;
}

.auth-form__text-link {
  text-decoration: none;
  color: var(--primary-color);
}

.auth-form__controls {
  margin-top: 80px;
  display: flex;
  justify-content: end;
}

.auth-form__control-back {
  margin-right: 8px;
}

.auth-form__socials {
  background-color: #f5f5f5;
  padding: 16px 36px;
  display: flex;
  justify-content: space-between;
  margin-top: 22px;
}

.auth-form__socials-icon {
  font-size: 1.8rem;
}
/* ... */

